<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".local_data_persistent.LatihanLocalDataPersistent">

    <Button
        android:id="@+id/btn_shared_preferences"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/shared_preferences" />

    <Button
        android:id="@+id/btn_shared_preferences_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/shared_preferences_setting" />

    <Button
        android:id="@+id/btn_preferences_data_store"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/preferences_data_store" />

    <Button
        android:id="@+id/btn_data_sqlite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/data_sqlite" />

</LinearLayout>