<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_specification"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/specification"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_editor_absoluteX="16dp"
        app:layout_editor_absoluteY="16dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/text_spec_display_title"
        android:layout_width="58dp"
        android:layout_height="wrap_content"
        android:text="@string/display"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="56dp" />

    <TextView
        android:id="@+id/text_spec_display"
        android:layout_width="288dp"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:text="@string/content_specs_display"
        app:layout_constraintTop_toBottomOf="@+id/text_specification"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="106dp" />

    <TextView
        android:id="@+id/text_spec_size_title"
        android:layout_width="58dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/size"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/text_spec_display"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/text_spec_size"
        android:layout_width="291dp"
        android:layout_height="37dp"
        android:text="@string/content_specs_size"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="106dp"
        tools:layout_editor_absoluteY="115dp" />

    <TextView
        android:id="@+id/text_battery_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/battery"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/text_spec_size"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/text_battery_display"
        android:layout_width="293dp"
        android:layout_height="144dp"
        android:text="@string/content_specs_battery"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="106dp"
        tools:layout_editor_absoluteY="165dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="97dp" />

</androidx.constraintlayout.widget.ConstraintLayout>