<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingVertical="42dp"
    android:paddingHorizontal="24dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_move_latihan_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/latihan_activity" />

    <Button
        android:id="@+id/btn_move_latihan_intent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/latihan_intent" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_and_view_group"
        android:id="@+id/btn_move_latihan_views_and_view_group" />

</LinearLayout>